--- a/styles/global.css
+++ b/styles/global.css
@@ -5,9 +5,13 @@
 }
 
 body {
-  width: 1100px;
-  margin: 0 auto;
+  min-width: 1100px;
+  width: 100%;
+  margin: 0;
   font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
 }
 
 h1,
@@ -31,8 +35,4 @@ a {
 
 img {
   width: 100%;
-}
-
-button {
-  font: inherit;
 }
